# rust_ucd

./: Cargo.toml  rust_ucd.db
src/: app.rs  dictionary.rs  entry.rs  error.rs  main.rs  message.rs  model.rs  ui.rs  view.rs
src/dictionary/: content.rs  entry.rs
src/dictionary/entry/: entry_fields.rs
src/entry/: entryfields.rs
