[package]
name = "rust_ucd"
version = "0.1.0"
edition = "2021"

[dependencies.rusqlite]
version = "0.32.0"
features = ["bundled"]
[dependencies]
derive_more = {version = "1", features = ["full"]}
clap = { version = "4.5.17", features = ["derive"] }
ratatui = "0.28.1"
crossterm = "0.28.1"
tui-textarea = "*"
tui-widget-list = "0.12.2"
